--- a/assets/style.css
+++ b/assets/style.css
@@ -5,22 +5,22 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-
-
-
-
-
 h1 {
     background-color: rgba(0, 0, 255, 0.637);
-    margin-right: 83%;  
+    margin-right: 83%; 
+    flex-direction: row; 
 }
 
 header {
     background-image: url("./images/BlueCheckers.jpg");
     width: 100%;
-    height: 45vh;
+    height: 10vh;
     padding: 0 10%;
     background: gray;
+}
+
+#page-cover {
+background-image: url(./images/BlueCheckers.jpg);
 }
 
 nav {
@@ -29,6 +29,7 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 20px 0;
+    flex-direction: row-reverse;
 }
    
 nav ul li {
@@ -38,12 +39,10 @@ nav ul li {
     margin-bottom: 70%;
     font-size: 120%;
     background-color: white;
+    
 }
 
 nav ul li a{
-    color:blue;
+    
 }
 
-.img-extend {
- 
-}
