--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,48 @@ nav ul li {
 }
 
 nav ul li a{
+    position:sticky;
     
 }
 
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    p {
+        font-size: 1.25rem;
+    }
+    }
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) { 
+    p {
+        font-size:1.5rem;
+        line-height: 1.5rem;
+    }
+    }
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+     
+        p {
+            font-size:1.75rem;
+            line-height: 1.75rem;
+        }
+        }
+    
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    p {
+        font-size:1.75rem;
+        line-height: 1.75rem;
+    }
+    }
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) { 
+    p {
+    font-size:1.75rem;
+    line-height: 1.75rem;
+}
+}
