--- a/assets/style.css
+++ b/assets/style.css
@@ -75,6 +75,9 @@ p {
     width: 85%;
 }
 
+#workpic {
+    background-image: url(./images/Morel_Mushrooms.webp);
+}
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     p h1 nav {
