--- a/assets/style.css
+++ b/assets/style.css
@@ -83,18 +83,31 @@ nav a {
     
 }
 
-#quote {
-    
-}
+
 
 main {
     background-color: var(--R);
 }
 
+section h2 {
+    display: inline;
+    text-align: right;
+    align-items: top;
+    color: black;
+    width: 10%;
+    padding-right: 10px;
+}
+
+.main-content {
+    display: inline;
+    padding-top:0px;
+    border-left: 5px solid blue;
+    width: 85%; 
+}
 #HotAirBalloon {
     display: flex;
     margin-top: 25px;
-    height:80%;
+    height:70%;
     justify-content: center;
 }
 
@@ -118,16 +131,21 @@ div {
 #big-project {
     border: 1px solid green;
     height:50%;
-    width: 100%;
+    width: 84.3%;
+    margin-left: 50px;
 }
 
 .small-projects {
     border: 1px solid blueviolet;
     height: 25%;
-    width: 50%;
+    width: 40%;
+    margin-left: 50px;
+    margin-top: 20px;
+    
 }
 
 p {
+  
     text-align: left;
     display: flex;
     padding-left: 30px;
