--- a/assets/style.css
+++ b/assets/style.css
@@ -168,6 +168,17 @@ div {
     
 }
 
+.photolinks {
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    width: 100px;
+    height: 500px;
+    z-index: 10;
+    background-color: black;
+    font-size: 50px;
+}
+
 p {
   
     text-align: left;
@@ -176,6 +187,14 @@ p {
     width: 85%;
 }
 
+section h4 {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    background-color: var(--light);
+    
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
