--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,6 @@ section h2 {
     padding-top: 0px;
     border-left: 5px solid blue;
     width: 85%;
-    height:
 }
 
 #contact-me {
@@ -123,14 +122,6 @@ section h2 {
 }
 
 
-
-#HotAirBalloon {
-    display: flex;
-    margin-top: 1x;
-    height: 70%;
-    justify-content: center;
-}
-
 div {
     display: block;
 }
@@ -138,11 +129,15 @@ div {
 
 
 #section-about-me {
-    height: 500px;
+    height: 300px;
     display: flex;
 
     padding-left: 50px;
     text-align: left;
+}
+
+#about-me-paragraph {
+    margin-top: 25px;
 }
 
 .section-work {
@@ -167,9 +162,6 @@ div {
     padding-left: 50px;
     text-align: left;
 }
-
-
-
 
 
 .projects {
@@ -297,5 +289,14 @@ section h4 {
         font-size: 1.75rem;
         line-height: 1.75rem;
         display: flex;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    h1 nav ul {
+        font-size: 10rem;
+        line-height: 1.75rem;
+        display: flex;
+
     }
 }
