--- a/assets/style.css
+++ b/assets/style.css
@@ -221,6 +221,13 @@ div {
 
 }
 
+
+.changeBox {
+    display: inline-block;
+    width:100%;
+    height: 100%;
+}
+
 .photolinks {
     display: flex;
     justify-content: center;
